<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/title"
        layout="@layout/layout_title"/>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_h"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_color">

        <TextView
            android:id="@+id/tv_universal_uuid"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/layout_title_h"
            android:gravity="center"
            android:text="@string/use_universal_uuid"
            android:textColor="@color/bg_white_100"/>

        <CheckBox
            android:id="@+id/cb_check_uuid"
            android:layout_width="@dimen/layout_title_h"
            android:layout_height="@dimen/layout_title_h"
            android:layout_toEndOf="@id/tv_universal_uuid"
            android:layout_toRightOf="@id/tv_universal_uuid"
            android:checked="true"
            android:gravity="center"/>

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/split_line_h"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/cb_check_uuid"
            android:layout_toRightOf="@id/cb_check_uuid"
            android:background="@color/bg_black_20"/>

        <TextView
            android:id="@+id/btn_send_coordinates"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_title_h"
            android:layout_toEndOf="@id/cb_check_uuid"
            android:layout_toRightOf="@id/cb_check_uuid"
            android:gravity="center"
            android:text="@string/send_coordinates"
            android:textColor="@color/bg_white_100"
            android:textSize="@dimen/font_3"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_title_h"
        android:layout_above="@id/rl_bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/app_color"/>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/send"/>

        <EditText
            android:id="@+id/edit_text_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_toLeftOf="@id/button_send"
            android:layout_toStartOf="@id/button_send"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_chat_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_send"
        android:layout_below="@id/title"
        android:layout_marginLeft="@dimen/list_margin"
        android:layout_marginRight="@dimen/list_margin"
        android:transcriptMode="alwaysScroll"/>
</RelativeLayout>
